[gd_scene load_steps=11 format=2]

[ext_resource path="res://PauseMenuScene.gd" type="Script" id=1]
[ext_resource path="res://btn_pressed.tres" type="StyleBox" id=2]
[ext_resource path="res://btn_normal.tres" type="StyleBox" id=3]
[ext_resource path="res://btn_hover.tres" type="StyleBox" id=4]
[ext_resource path="res://fonts/Route 26.otf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 26
font_data = ExtResource( 5 )

[node name="PauseMenuScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.427451, 0.427451, 0.427451, 0.454902 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 93.0
margin_top = 33.0
margin_right = 866.0
margin_bottom = 507.0
custom_constants/separation = 32

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 773.0
margin_bottom = 68.0
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 159.0
margin_right = 614.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 1 )
text = "Game Paused"

[node name="HBoxContainer3" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 773.0
margin_bottom = 378.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer3"]
margin_right = 773.0
margin_bottom = 278.0
custom_constants/separation = 10

[node name="MovementLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
margin_right = 773.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 4 )
text = "Movement: Left Stick/D-Pads"

[node name="JumpLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
margin_top = 36.0
margin_right = 773.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 4 )
text = "Jump: A / X"

[node name="RunLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
margin_top = 72.0
margin_right = 773.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 4 )
text = "Run: RB / R1"

[node name="AbilityLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
margin_top = 108.0
margin_right = 773.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 4 )
text = "Use Ability: B / O"

[node name="GPLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
margin_top = 144.0
margin_right = 773.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 4 )
text = "Use Grappling Hook: LB / L1"

[node name="LWallRunLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
margin_top = 180.0
margin_right = 773.0
margin_bottom = 206.0
custom_fonts/font = SubResource( 4 )
text = "Wall Run to Left: Hold Move Left + Hold Jump "

[node name="RWallRunLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
margin_top = 216.0
margin_right = 773.0
margin_bottom = 242.0
custom_fonts/font = SubResource( 4 )
text = "Wall Run to Right: Hold Move Right + Hold Jump"

[node name="WallRunJumpLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
margin_top = 252.0
margin_right = 773.0
margin_bottom = 278.0
custom_fonts/font = SubResource( 5 )
text = "Wall Run Jump: Hold Move Right / Move Left + Release Jump"

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 410.0
margin_right = 773.0
margin_bottom = 474.0
custom_constants/separation = 128
alignment = 1

[node name="ResumeBtn" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
margin_left = 66.0
margin_right = 322.0
margin_bottom = 64.0
rect_min_size = Vector2( 256, 64 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
text = "Resume"

[node name="MenuBtn" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
margin_left = 450.0
margin_right = 706.0
margin_bottom = 64.0
rect_min_size = Vector2( 256, 64 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
text = "Menu"

[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer2/ResumeBtn" to="." method="_on_ResumeBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer2/MenuBtn" to="." method="_on_MenuBtn_pressed"]
